# ai-deals

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: daily.yml
docs/: index.html
docs/archive/: 2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  (+22 more)
docs/data/: latest.json  timeseries.json
plans/: 00-overview.md  01-pareto-frontier.md  02-intelligence-bands.md  03-daily-diff.md  04-trends.md  05-mechanics-fixes.md
scripts/: build_timeseries.py  extract_may24.py
src/: arena_fetcher.py  bands.py  differ.py  insights.py  merger.py  models.py  openrouter_fetcher.py  pricing.py  renderer.py  scorer.py  scraper.py  timeseries.py  writer.py
templates/: index.html  index.html.j2
tests/: conftest.py  test_bands.py  test_differ.py  test_frontier.py  test_pipeline.py  test_pricing.py  test_rescore_regression.py  test_scorer.py  test_timeseries.py
